--- a/loyo2.html
+++ b/loyo2.html
@@ -34,11 +34,11 @@
         </button>
       </div>
       <div class="modal-body">
-        ...
+        booo
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary"> click out</button>
+        <button type="button" class="btn btn-primary">dont touch me tehe</button>
       </div>
     </div>
   </div>
